--- a/src/app/components/profile-pic/profile-pic.component.scss
+++ b/src/app/components/profile-pic/profile-pic.component.scss
@@ -11,8 +11,8 @@
 
 }
 .button{
-    margin-top: 185px;
-    margin-bottom: 185px;
+    margin-top: 75px;
+    margin-bottom: 75px;
 
 }
 .footer{
@@ -20,4 +20,7 @@
     margin-right: 50px;
     margin-top: 20px;
     margin-bottom: 20px;
+}
+::ng-deep .mat-dialog-container{
+    padding:0px;
 }
