--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
                 
             </div> -->
 
-      <div class="grid-list" fxFlex=14 fxFlex.md=10 fxFlex.sm=8 fxFlex.xs=6>
+      <div class="grid-list" fxFlex=18 fxFlex.md=10 fxFlex.sm=8 fxFlex.xs=6>
         <button mat-icon-button (click)="refresh()">
           <mat-icon>refresh</mat-icon>
         </button>
@@ -38,40 +38,36 @@
         </button>
       </div>
 
-      <div fxFlex=14 fxFlex.md=18 fxFlex.sm=35 fxFlex.xs=35 fxLayoutAlign="end center">
-        <img mat-card-avatar [matMenuTriggerFor]="menu" [src]="url">
-        <!-- <button mat-mini-fab color="" [matMenuTriggerFor]="menu"  >Profile</button> -->
-        <!-- <div class="profile-pic" fxFlex=100 style="width:100%;" > -->
+      <div fxFlex=10 fxFlex.md=18 fxFlex.sm=35 fxFlex.xs=35 fxLayoutAlign="end center"  >
+        <img mat-card-avatar [matMenuTriggerFor]="menu" [src]="imageurl">
+        
+        
 
-        <mat-menu #menu="matMenu">
-          <div fxLayout="row" fxLayoutGap="15px" style="width:100%;">
-            <div class="profile-image" style="border-radius: 100%;">
-              <img mat-card-avatar style="height: 60px;width: 60px;" src="../../../assets/images/boss.jpeg"
-                (click)="changeProfile()">
+            <mat-menu #menu="matMenu">
+              <div fxLayout="row" fxLayoutGap="15px">
+                <div class="profile-image" style="border-radius: 100%;">
+                  <img mat-card-avatar style="height: 70px;width: 70px;" [src]="imageurl" (click)="changeProfile()">
 
-            </div>
-            <div>
-              <mat-card-title style="font-size:14px;font-family: Roboto,Arial,sans-serif;">username
-              </mat-card-title>
-              <mat-card-title style="font-size:14px;font-family: Roboto,Arial,sans-serif;">user-email-address
-              </mat-card-title>
-            </div>
+                </div>
+                <div>
+                  <mat-card-title style="font-size:14px;font-family: Roboto,Arial,sans-serif;">{{username}}
+                  </mat-card-title>
+                  <mat-card-title style="font-size:14px;font-family: Roboto,Arial,sans-serif;">{{email}}
+                  </mat-card-title>
+                </div>
 
-          </div>
-          <div class="divider"></div>
-          <div class="footer" fxLayout="row" fxLayoutAlign="space-between center" fxFlex=100 style="width:100%;">
-            <!-- <div> -->
-            <button mat-raised-button (click)="addAccount" id="add-btn" color="">Add account</button>
-            <!-- </div> -->
-            <!-- <div> -->
-            <button mat-raised-button (click)="logout()" id="logout-btn" color="">Sign out</button>
+              </div>
+              <div class="divider"></div>
+              <div class="footer" fxLayout="row" fxLayoutAlign="space-between center" fxFlex=100 >
+                <button mat-raised-button (click)="addAccount" id="add-btn" color="">Add account</button>
+                <button mat-raised-button (click)="logout()" id="logout-btn" color="">Sign out</button>
 
-            <!-- </div> -->
 
-          </div>
+              </div>
 
-        </mat-menu>
-        <!-- </div>   -->
+            </mat-menu>
+      
+
 
       </div>
     </div>
