--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,5 +1,6 @@
 .search{
-    width : 50%;
+    width : 100%;
+    //background-color: rgb(245, 237, 228);
 
 }
 .sidenavbar{
@@ -17,12 +18,12 @@
 .round{
     margin-left: -30px;
 }
-.profile-pic{
-  width:100%;
-  height: 100%;
-  max-width: 100%;
-  max-height: 100%;
-}
+// .profile-pic{
+//   width:100%;
+//   height: 100%;
+//   max-width: 100%;
+//   max-height: 100%;
+// }
 .footer{
   width:100%;
   height: 100%;
@@ -100,6 +101,10 @@
        `<body>` to be our scrolling element for mobile layouts. */
     flex: 1 0 auto;
   }
+  
   ::ng-deep .mat-menu-content {
-    width: 220px;
+    width: 100%;    
+    padding-bottom: 8px;
+    padding-top: 0px;
+
   }
