--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -15,9 +15,9 @@
 ::ng-deep .mat-form-field-wrapper{
     padding-bottom: 0px;
 }
-.round{
-    margin-left: -30px;
-}
+// .round{
+//     // margin-left: -30px;
+// }
 // .profile-pic{
 //   width:100%;
 //   height: 100%;
@@ -57,15 +57,22 @@
     border:0px;
 }
 .sidnav{
+    letter-spacing: .01785714em;
+    padding-bottom: 4px;
+    padding-top: 4px;
     border-width: 50px;
     background-color: none;
     border-bottom-right-radius: 32px;
     border-top-right-radius: 32px;
 }
 .sidenav-list{
-    border-width: 50px;
-    width: 100px;
-    background-color: rgba(238, 233, 142, 0.408);
+    padding: 4px 0px 4px 0px;
+    letter-spacing: .01785714em;
+    //padding-bottom: 4px;
+    // padding-top: 4px;
+    border-width: 100px;
+    width: 100%;
+    background-color:#feefc3;
     border-bottom-right-radius: 32px;
     border-top-right-radius: 32px;
 }
@@ -107,4 +114,7 @@
     padding-bottom: 8px;
     padding-top: 0px;
 
+  }
+  ::ng-deep .mat-button, .mat-flat-button, .mat-icon-button, .mat-stroked-button{
+    line-height: 45px;
   }
