--- a/src/app/components/diaplay-note/diaplay-note.component.scss
+++ b/src/app/components/diaplay-note/diaplay-note.component.scss
@@ -19,6 +19,10 @@
     max-width: 90%;
     margin-bottom: 15px;
 }
+.description{
+    max-height: 25px;
+    overflow: hidden;
+}
 div .icon{
     visibility: hidden;
 }
