--- a/src/app/components/create-label/create-label.component.html
+++ b/src/app/components/create-label/create-label.component.html
@@ -1,4 +1,4 @@
-<div fxFlex=100 fxFlex.xs=100 >
+<div fxFlex=100 fxFlex.xs=100>
   <mat-card>
     <div>
       <mat-card-title>
@@ -6,10 +6,11 @@
       </mat-card-title>
     </div>
     <div fxLayoutAlign="row" fxLayoutAlign="center center">
-      <div (mouseover)="changeText=true" (mouseout)="changeText=false" >
+      <div (mouseover)="changeText=true" (mouseout)="changeText=false">
         <button mat-icon-button (click)='close()'>
           <span *ngIf="!changeText"><img src="../../../assets/svg-icons/multiply.svg" height="15px" width="15px"></span>
-          <span *ngIf="changeText"><img src="../../../assets/svg-icons/icons8-plus-24.png" height="15px" width="15px"></span>
+          <span *ngIf="changeText"><img src="../../../assets/svg-icons/icons8-plus-24.png" height="15px"
+              width="15px"></span>
 
         </button>
       </div>
@@ -18,26 +19,34 @@
           <input matInput placeholder="Create new label" [formControl]="labelname">
         </mat-form-field>
       </div>
-      
-      
-      
+
+
+
       <div>
         <button mat-icon-button (click)="addLabels()">
-          <img src="../../../assets/svg-icons/checkmark.svg"  height="50px" width="50px">
+          <img src="../../../assets/svg-icons/checkmark.svg" height="50px" width="50px">
         </button>
       </div>
-      
+
     </div>
-    <div fxLayoutAlign="row" fxLayoutAlign="center center" *ngFor='let labels of getLabels' (mouseover)="changeText=true" (mouseout)="changeText=false" >
+    <div fxLayoutAlign="row" fxLayoutAlign="center center" *ngFor='let labels of getLabels'
+      (mouseover)="changeText=true" (mouseout)="changeText=false">
+
       <button mat-icon-button (click)="deleteLabels(labels.id)">
-            <span *ngIf="!changeText"><mat-icon>label</mat-icon></span>
-            <span *ngIf="changeText"><mat-icon>delete</mat-icon></span>
-        </button>
-     
+        <span *ngIf="!changeText">
+          <mat-icon>label</mat-icon>
+        </span>
+        <span *ngIf="changeText">
+          <mat-icon>delete</mat-icon>
+        </span>
+      </button>
+
       <input matInput value="{{labels.label}}" [formControl]="editname">
       <button mat-icon-button (click)="editLabels(labels.id)">
         <mat-icon>create</mat-icon>
       </button>
+
+
 
     </div>
     <div class="divider"></div>
