--- a/src/app/components/diaplay-note/diaplay-note.component.html
+++ b/src/app/components/diaplay-note/diaplay-note.component.html
@@ -48,8 +48,8 @@
                 <div class="description" fxLayoutGap="10px"  >
                     <mat-card-title style="font-size:16px;font-family:Roboto,Arial,sans-serif;">{{note.description}}</mat-card-title>
                 </div>
-                <div class="icon">
-                    <app-icon [childMessage]='note'></app-icon>
+                <div class="icon"  >
+                    <app-icon [childMessage]='note' [receivedLabels]='getLabels' ></app-icon>
                 </div>
 
 
