--- a/src/app/components/diaplay-note/diaplay-note.component.html
+++ b/src/app/components/diaplay-note/diaplay-note.component.html
@@ -48,6 +48,10 @@
                 <div class="description" fxLayoutGap="10px"  >
                     <mat-card-title style="font-size:16px;font-family:Roboto,Arial,sans-serif;">{{note.description}}</mat-card-title>
                 </div>
+                <div  >
+                    <mat-card-title>{{note.label}} </mat-card-title> 
+
+                </div>
                 <div class="icon"  >
                     <app-icon [childMessage]='note' [receivedLabels]='getLabels' ></app-icon>
                 </div>
