--- a/src/app/components/diaplay-note/diaplay-note.component.html
+++ b/src/app/components/diaplay-note/diaplay-note.component.html
@@ -48,14 +48,19 @@
                 <div class="description" fxLayoutGap="10px"  >
                     <mat-card-title style="font-size:16px;font-family:Roboto,Arial,sans-serif;">{{note.description}}</mat-card-title>
                 </div>
-                <div  >
-                    <mat-card-title>{{note.label}} </mat-card-title> 
-
+               
+               <div fxLayout="row wrap"  >
+                    <mat-chip-list >
+                        <mat-chip *ngFor="let labels of note.noteLabels"  [removable]="removable" (removed)="deleteNoteLabel(note.id,labels.id)">
+                            {{labels.label}}
+                            <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                        </mat-chip>
+                             
+                    </mat-chip-list>
                 </div>
                 <div class="icon"  >
-                    <app-icon [childMessage]='note' [receivedLabels]='getLabels' ></app-icon>
+                        <app-icon [childMessage]='note' [receivedLabels]='getLabels' (reloadEvent)="reloadAction($event)" ></app-icon>
                 </div>
-
 
             </mat-card>
         </div>
