--- a/src/app/components/diaplay-note/diaplay-note.component.html
+++ b/src/app/components/diaplay-note/diaplay-note.component.html
@@ -1,4 +1,4 @@
-<div fxFlex=100  fxLayout="row wrap" fxLayout.xs="column" fxLayout.sm="row wrap" fxLayout.md="row wrap">
+<div fxFlex=100 style="justify-content: center;" fxLayout="row wrap"  fxLayout.xs="column" fxLayout.sm="row wrap" fxLayout.md="row wrap">
     <div *ngFor="let note of allCards" class="container" fxLayoutGap="2px">
         <!-- <div *ngIf="note.isPined==true" >
             <mat-card class="cards" [ngStyle]="{'background-color': note.color}">
