--- a/src/app/components/diaplay-note/diaplay-note.component.scss
+++ b/src/app/components/diaplay-note/diaplay-note.component.scss
@@ -6,7 +6,12 @@
     margin-bottom: 12px;
     margin-top: 12px;
     min-width: 280px;
+
     
+    
+}
+.allnotes{
+    justify-content: center;
 }
 .title{
     border:none transparent;
@@ -17,7 +22,9 @@
     height:48;
     width:85%;
     max-width: 90%;
-    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+    
 }
 .description{
     max-height: 25px;
@@ -29,12 +36,12 @@ div .icon{
 div:hover .icon{
     visibility: visible;
 }
-div .pinned{
-    visibility:hidden;
-}
-div:hover .pinned{
-    visibility:visible;
-}
+// div .pinned{
+//     visibility:hidden;
+// }
+// div:hover .pinned{
+//     visibility:visible;
+// }
 ::ng-deep .mat-dialog-container{
     padding:0px;
 }
