--- a/src/app/components/icon/icon.component.scss
+++ b/src/app/components/icon/icon.component.scss
@@ -3,3 +3,23 @@
     width:24px !important;
     font-size:24px !important;
 }
+.tab { 
+    display:inline-block; 
+    margin-left: 75px; 
+}
+#divider{
+    //padding: 0px 40px 0px 0px;
+    top:10px;
+    width:100%;
+    height:2px;
+    margin-left:auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    background-color: rgba(0,0,0,.28)
+    
+
+}
+::ng-deep .mat-button{
+min-width: 0px;
+padding:0px 0px 0px 0px;
+}
