--- a/src/app/components/diaplay-note/diaplay-note.component.scss
+++ b/src/app/components/diaplay-note/diaplay-note.component.scss
@@ -1,7 +1,7 @@
 .cards{
 
     width: 275px;
-    height: 125px;
+    //height: 125px;
     margin-left: 28px;
     margin-bottom: 12px;
     margin-top: 12px;
@@ -10,9 +10,9 @@
     
     
 }
-.allnotes{
-    justify-content: center;
-}
+// .allnotes{
+//     justify-content: center;
+// }
 .title{
     border:none transparent;
     outline: none;
