--- a/src/app/components/icon/icon.component.html
+++ b/src/app/components/icon/icon.component.html
@@ -8,9 +8,9 @@
               <mat-icon class="material-icons">notification_important</mat-icon>
             </button>
             <mat-menu #remainderlist="matMenu">
-              <button mat-menu-item>Later today <span class="tab">8:00 PM</span> </button>
-              <button mat-menu-item>Tommorow <span class="tab">8:00 AM</span></button>
-              <button mat-menu-item>Next Week <span class="tab">Mon,8:00 AM</span> </button>
+              <button mat-menu-item (click)="setRemainderToday()" >Later today <span class="tab"  >8:00 PM</span> </button>
+              <button mat-menu-item (click)="setRemainderTommorow()" >Tommorow <span class="tab">8:00 AM</span></button>
+              <button mat-menu-item (click)="setRemainderNextWeek()" >Next Week <span class="tab">Mon,8:00 AM</span> </button>
 
               <button mat-menu-item [matMenuTriggerFor]="remaindersublist">
                 <img src="../../../assets/svg-icons/remainder.svg" height="14px" width="14px">
@@ -52,7 +52,7 @@
                           <div id="divider"></div>
 
                           <div fxLayout="row" fxLayoutAlign="end end" >
-                              <button type="text" (click)="isOpen=false" (click)="addRemainder(datetimepick)" 
+                              <button type="text" (click)="isOpen=false" (click)="setRemainder(datetimepick)" 
                                   style="padding: 0;border: none; background: none; font-size: 16px">Save</button>
                           </div>
                     </div>
