--- a/src/app/components/diaplay-note/diaplay-note.component.scss
+++ b/src/app/components/diaplay-note/diaplay-note.component.scss
@@ -6,9 +6,14 @@
     margin-bottom: 12px;
     margin-top: 12px;
     min-width: 280px;
+    
+
 
     
     
+}
+.remainder{
+    margin-bottom:8px;
 }
 // .allnotes{
 //     justify-content: center;
@@ -45,9 +50,18 @@ div:hover .icon{
 ::ng-deep .mat-dialog-container{
     padding:0px;
 }
- .mat-chip-list-wrapper .mat-standard-chip, .mat-chip-list-wrapper input.mat-input-element {
-    margin-top: 0px !important;
-    margin-right: 0px !important;
-    margin-bottom: 0px !important;
-    margin-left: 0px !important;
+::ng-deep .mat-chip-list-wrapper .mat-standard-chip {
+    // margin-top:6px;
+    // margin-right:6px;
+    // margin-bottom:6px;
+    // margin-left:6px;
+    margin:6px 6px 6px 6px;
 }
+
+
+
+
+
+
+
+
