--- a/src/app/components/collaborators/collaborators.component.scss
+++ b/src/app/components/collaborators/collaborators.component.scss
@@ -10,6 +10,10 @@
     
 
 }
+
+.collaborators{
+border-radius: 15px 15px 15px 15px;    
+}
 .emailList{
     border:none transparent; 
     outline:none; font-size: 16px; 
@@ -22,3 +26,8 @@
     background: none; 
     font-size: 16px
 }
+::ng-deep .mat-dialog-container{
+    //padding:0px;
+    border-radius: 10px 10px 10px 10px;
+  
+  }
