--- a/src/app/components/diaplay-note/diaplay-note.component.scss
+++ b/src/app/components/diaplay-note/diaplay-note.component.scss
@@ -6,15 +6,16 @@
     margin-bottom: 12px;
     margin-top: 12px;
     min-width: 280px;
+    border-radius: 15px;
     
 
 
     
     
 }
-.remainder{
-    margin-bottom:8px;
-}
+// .remainder{
+//     margin-bottom:8px;
+// }
 // .allnotes{
 //     justify-content: center;
 // }
@@ -25,7 +26,7 @@
     size:70; 
     width:48; 
     height:48;
-    width:85%;
+    width:100%;
     max-width: 90%;
     display: flex;
     align-items: center;
