--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -4,7 +4,37 @@
 
 }
 .sidenavbar{
-  padding: 0px 40px;
+  //padding: 0px 40px;
+}
+.note{
+  padding: 0px 50px 0px 50px;
+}
+.remainder{
+  margin-top: 8px;
+  margin-bottom: 8px;
+  padding: 0px 50px 0px 50px;
+
+}
+.archive{
+  margin-top: 8px;
+  margin-bottom: 8px;
+  padding: 0px 50px 0px 50px;
+
+}
+.label {
+  margin-top: 8px;
+  margin-bottom: 8px;
+  padding: 0px 50px 0px 50px;
+}
+.editlabel{
+  margin-top: 8px;
+  margin-bottom: 8px;
+  padding: 0px 50px 0px 50px;
+}
+.trash{
+
+  padding: 0px 50px 0px 50px;
+
 }
 .fun-img{
     
@@ -41,8 +71,11 @@
   margin-left: 20px;
   margin-bottom: 20px;
 }
+.round{
+  font-size: 14px;
+}
 .divider{
-    padding: 0px 40px 0px 0px;
+   //padding: 0px 40px 0px 0px;
     top:10px;
     width:100%;
     height:1px;
@@ -66,12 +99,11 @@
     border-top-right-radius: 32px;
 }
 .sidenav-list{
-    padding: 4px 0px 4px 0px;
     letter-spacing: .01785714em;
-    //padding-bottom: 4px;
-    // padding-top: 4px;
+    padding-bottom: 4px;
+    padding-top: 4px;
     border-width: 100px;
-    width: 100%;
+    //width: 100%;
     background-color:#feefc3;
     border-bottom-right-radius: 32px;
     border-top-right-radius: 32px;
@@ -117,5 +149,6 @@
   }
   ::ng-deep .mat-button, .mat-flat-button, .mat-icon-button, .mat-stroked-button{
     line-height: 45px;
+    padding:0px 16px 0px 16px;
   }
  
