--- a/src/app/components/profile-pic/profile-pic.component.html
+++ b/src/app/components/profile-pic/profile-pic.component.html
@@ -2,7 +2,7 @@
   <mat-card fxFlex=100   >
     <div fxLayout="row" fxLayoutAlign="space-between center">
       <mat-card-title>
-        <h3>Select Profile Photo</h3>
+        <h4>Select Profile Photo</h4>
       </mat-card-title>
       <button mat-icon-button (click)='close()'>
         <img src="../../../assets/svg-icons/multiply.svg" height="20px" width="20px">
@@ -14,7 +14,7 @@
        
             <input hidden type="file" #uploader (change)="getprofilephoto($event)" 
             color=""  accept="image/*"/>
-            <button (click)="uploader.click()" >
+            <button class="upload" (click)="uploader.click()" >
                 Upload a photo
             </button>
        
