--- a/src/app/components/update-note/update-note.component.scss
+++ b/src/app/components/update-note/update-note.component.scss
@@ -34,3 +34,8 @@
     margin-bottom: 10px;
 
 }
+::ng-deep .mat-dialog-container{
+    //padding:0px;
+    border-radius: 10px 10px 10px 10px;
+  
+  }
